rust/protocols-sys/c++/src/lib/interface.h

    typedef struct ServerFHE {
        void* context;
        void* encoder;
        void* encryptor;
        void* evaluator;
        void* gal_keys;
        void* relin_keys;
        char* zero;
    } ServerFHE;
    typedef struct SerialCT {
        char* inner;
        uint64_t size;
    } SerialCT;
    typedef struct ServerShares {
        // Opaque vectors of Plaintexts  
        char** linear;
        char** linear_mac;
        char** r_mac;
        // Opaque ciphertexts to be sent to client
        SerialCT linear_ct;
        SerialCT linear_mac_ct;
        SerialCT r_mac_ct;
        // Opaque plaintexts of MAC keys
        char* mac_key_a;
        char* mac_key_b;
    } ServerShares;
    typedef struct ClientShares {
        // Opaque ciphertext sent to server
        SerialCT input_ct;
        // Opaque ciphertexts received from server
        SerialCT linear_ct;
        SerialCT linear_mac_ct;
        SerialCT r_mac_ct;
        // Decryption results
        uint64_t** linear;
        uint64_t** linear_mac;
        uint64_t** r_mac;
    } ClientShares;
    typedef struct ServerTriples {
        // Batch size
        uint32_t num;
        uint64_t vec_len;
        // Opaque vectors of Plaintexts
        char** a_rand;
        char** b_rand;
        char** c_rand;
        char** a_share;
        char** b_share;
        char** c_share;
        char** a_mac_share;
        char** b_mac_share;
        char** c_mac_share;
        // Opaque ciphertexts sent to client
        SerialCT a_ct;
        SerialCT b_ct;
        SerialCT c_ct;
        SerialCT a_mac_ct;
        SerialCT b_mac_ct;
        SerialCT c_mac_ct;
        // Opaque Plaintext of MAC key
        char* mac_key;
    } ServerTriples;