rust/protocols-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_ServerFHE() {
    assert_eq!(
        ::std::mem::size_of::<ServerFHE>(),
        56usize,
        concat!("Size of: ", stringify!(ServerFHE))
    );
    assert_eq!(
        ::std::mem::align_of::<ServerFHE>(),
        8usize,
        concat!("Alignment of ", stringify!(ServerFHE))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).context as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(context)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).encoder as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(encoder)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).encryptor as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(encryptor)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).evaluator as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(evaluator)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).gal_keys as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(gal_keys)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).relin_keys as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(relin_keys)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerFHE>())).zero as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerFHE),
            "::",
            stringify!(zero)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SerialCT {
    pub inner: *mut ::std::os::raw::c_char,
    pub size: u64,
}
#[test]
fn bindgen_test_layout_SerialCT() {
    assert_eq!(
        ::std::mem::size_of::<SerialCT>(),
        16usize,
        concat!("Size of: ", stringify!(SerialCT))
    );
    assert_eq!(
        ::std::mem::align_of::<SerialCT>(),
        8usize,
        concat!("Alignment of ", stringify!(SerialCT))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<SerialCT>())).inner as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(SerialCT),
            "::",
            stringify!(inner)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<SerialCT>())).size as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(SerialCT),
            "::",
            stringify!(size)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ServerShares {
    pub linear: *mut *mut ::std::os::raw::c_char,
    pub linear_mac: *mut *mut ::std::os::raw::c_char,
    pub r_mac: *mut *mut ::std::os::raw::c_char,
    pub linear_ct: SerialCT,
    pub linear_mac_ct: SerialCT,
    pub r_mac_ct: SerialCT,
    pub mac_key_a: *mut ::std::os::raw::c_char,
    pub mac_key_b: *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_ServerShares() {
    assert_eq!(
        ::std::mem::size_of::<ServerShares>(),
        88usize,
        concat!("Size of: ", stringify!(ServerShares))
    );
    assert_eq!(
        ::std::mem::align_of::<ServerShares>(),
        8usize,
        concat!("Alignment of ", stringify!(ServerShares))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).linear as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(linear)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).linear_mac as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(linear_mac)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).r_mac as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(r_mac)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).linear_ct as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(linear_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).linear_mac_ct as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(linear_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).r_mac_ct as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(r_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).mac_key_a as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(mac_key_a)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ServerShares>())).mac_key_b as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ServerShares),
            "::",
            stringify!(mac_key_b)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ClientShares {
    pub input_ct: SerialCT,
    pub linear_ct: SerialCT,
    pub linear_mac_ct: SerialCT,
    pub r_mac_ct: SerialCT,
    pub linear: *mut *mut u64,
    pub linear_mac: *mut *mut u64,
    pub r_mac: *mut *mut u64,
}
#[test]
fn bindgen_test_layout_ClientShares() {
    assert_eq!(
        ::std::mem::size_of::<ClientShares>(),
        88usize,
        concat!("Size of: ", stringify!(ClientShares))
    );
    assert_eq!(
        ::std::mem::align_of::<ClientShares>(),
        8usize,
        concat!("Alignment of ", stringify!(ClientShares))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).input_ct as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(input_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).linear_ct as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(linear_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).linear_mac_ct as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(linear_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).r_mac_ct as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(r_mac_ct)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).linear as *const _ as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(linear)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).linear_mac as *const _ as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(linear_mac)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ClientShares>())).r_mac as *const _ as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ClientShares),
            "::",
            stringify!(r_mac)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ServerTriples {
    pub num: u32,
    pub vec_len: u64,
    pub a_rand: *mut *mut ::std::os::raw::c_char,
    pub b_rand: *mut *mut ::std::os::raw::c_char,
    pub c_rand: *mut *mut ::std::os::raw::c_char,
    pub a_share: *mut *mut ::std::os::raw::c_char,
    pub b_share: *mut *mut ::std::os::raw::c_char,
    pub c_share: *mut *mut ::std::os::raw::c_char,
    pub a_mac_share: *mut *mut ::std::os::raw::c_char,
    pub b_mac_share: *mut *mut ::std::os::raw::c_char,
    pub c_mac_share: *mut *mut ::std::os::raw::c_char,
    pub a_ct: SerialCT,
    pub b_ct: SerialCT,
    pub c_ct: SerialCT,
    pub a_mac_ct: SerialCT,
    pub b_mac_ct: SerialCT,
    pub c_mac_ct: SerialCT,
    pub mac_key: *mut ::std::os::raw::c_char,
}
